--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -151,10 +151,10 @@ if (VALGRIND_FOUND)
   option(ENABLE_VALGRIND "Use valgrind to detect run-time problems" ON)
 endif (VALGRIND_FOUND)
 
-option(ENABLE_WARNING_ERROR "Consider compiler warnings to be errors" OFF)
-if (ENABLE_WARNING_ERROR)
-  set (WARNING_FLAGS "${WARNING_ERROR} ${WARNING_FLAGS}")
-endif (ENABLE_WARNING_ERROR)
+#option(ENABLE_WARNING_ERROR "Consider compiler warnings to be errors" OFF)
+#if (ENABLE_WARNING_ERROR)
+#  set (WARNING_FLAGS "${WARNING_ERROR} ${WARNING_FLAGS}")
+#endif (ENABLE_WARNING_ERROR)
 
 if (GCC_VERSION AND NOT GCC_VERSION VERSION_LESS 5.1)
   option(ENABLE_GLIBCXX_OLD_ABI "Enable old (pre GCC 5.1) C++ ABI" OFF)
